--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,10 @@ h1{
     font-family:"Lato";
 }
 
+h2{
+    font-family: "Lato_bold";
+}
+
 #contact{
     height: 100px;
     background-color:#2c1d27;
@@ -71,4 +75,58 @@ h1{
 a{
     text-decoration: none;
     color: white;
+}
+
+main{
+    display: flex;
+
+}
+
+#aside{
+    background-color: #782221;
+    width: 350px;
+}
+
+div{
+    padding-bottom: 10px;
+}
+
+div h2{
+    background-color: #dbc2a4;
+    padding-left: 20px;
+    width: 250px;
+}
+
+#description{
+    width: 250px;
+    color: white;
+    text-indent: 20px;
+    padding-left: 20px;
+    ;
+}
+
+#interet  {
+    color: white;
+}
+
+#langue  {
+    color: white;
+}
+
+article{
+    width: 810px;
+    margin: 20px;
+}
+
+
+section h2{
+    background-color: #dbc2a4;
+    border-left: solid 8px #782221;
+    padding-left: 10px; 
+}
+
+footer{
+    background-color: #782221;
+    display: flex;
+    height: 200px;
 }
