--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,59 +1,29 @@
-.lato-thin {
-    font-family: "Lato", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-  }
-  
-  .lato-light {
-    font-family: "Lato", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  .lato-regular {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .lato-bold {
-    font-family: "Lato", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .lato-black {
-    font-family: "Lato", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-  }
-  
-  .lato-thin-italic {
-    font-family: "Lato", sans-serif;
-    font-weight: 100;
-    font-style: italic;
-  }
-  
-  .lato-light-italic {
-    font-family: "Lato", sans-serif;
-    font-weight: 300;
-    font-style: italic;
-  }
-  
-  .lato-regular-italic {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-  }
-  
-  .lato-bold-italic {
-    font-family: "Lato", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-  }
-  
-  .lato-black-italic {
-    font-family: "Lato", sans-serif;
-    font-weight: 900;
-    font-style: italic;
-  }
+@font-face {
+  font-family:"Lato";
+  src: url("/fonts/Lato/Lato-Regular.ttf") format('truetype');
+}
+
+@font-face {
+  font-family:"Lato_bold";
+  src: url("/fonts/Lato/Lato-Bold.ttf") format('truetype');
+}
+
+@font-face {
+  font-family:"Lato_italic";
+  src: url("/fonts/Lato/Lato-Italic.ttf") format('truetype');
+}
+
+@font-face {
+  font-family:"Raleway";
+  src: url("/fonts/Raleway/static/Raleway-Regular.ttf") format('truetype');
+}
+
+@font-face {
+  font-family:"Raleway_blod";
+  src: url("/fonts/Raleway/Raleway-Bold.ttf") format('truetype');
+}
+
+@font-face {
+  font-family:"Raleway_italic";
+  src: url("/fonts/Raleway/Raleway-Italic.ttf") format('truetype');
+}
